package view;

import controller.PlayController;

public interface PlayView {

	void interact(PlayController playController);

}