package view;

import controller.ResumeController;

public interface ResumeView {

	void interact(ResumeController resumeController);
	
}
