package view;

import controller.StartController;

public interface StartView {

	public void interact(StartController startController);
	
}
